@@ -5,6 +5,8 @@ List of major changes and improvements between releases
 Yosys 0.10 .. Yosys 0.10-dev
 --------------------------
 
+ * Various
+    - Added $aldff and $aldffe (flip-flops with async load) cells
 
 Yosys 0.9 .. Yosys 0.10
 --------------------------
